# cprojecttemplate

./: CMakeLists.txt  LICENSE  README.md  cleanbuild.sh  createproject.sh
doc/: CMakeLists.txt  Doxyfile.in
include/: demo.h
src/: CMakeLists.txt  demo.c
tests/: CMakeLists.txt  test_bar.cpp  test_foo.cpp
